--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,10 +7,17 @@ body, h1, h2, h3, h4, h5, h6 {
 body {
     margin: 0;
     background-color: #f2f2f2;
+    font-family: 'Karla', sans-serif;
+    
 }
 
 body, html, #app, #app > div {
     height: 100%;
+
+}
+
+button {
+	font-family: 'Karla', sans-serif;
 }
 
 a {
